--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="bar"><div class="progress" style="width: 55%"></div></div>
                 </div>
             </div>
-            <div class="projects">
+            <div class="projects" style="display:none;">
                 <h2><i class="fa-solid fa-folder-open"></i> <span id="projects-title">Projects</span></h2>
                 <div class="projects-list">
                     <div class="project-card">
