--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li>Learning new tech</li>
                 </ul>
             </div>
-            <div class="quick-block cta-block">
+            <div class="quick-block cta-block" style="display:none;">
                 <a href="CV.pdf" class="cta-btn" download><i class="fa-solid fa-file-arrow-down"></i> <span id="cta-text">Download CV</span></a>
             </div>
             <div class="quick-block days-block">
