--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="index.html" class="nav-logo"><img src="avatar.png" alt="Avatar" class="nav-avatar"></a>
         <ul class="nav-list">
             <li><a href="index.html" class="nav-link nav-home-link"><i class="fa-solid fa-home nav-icon"></i><span class="nav-text">Home</span></a></li>
-            <li><a href="projects.html" class="nav-link nav-projects-link"><i class="fa-solid fa-folder-open nav-icon"></i><span class="nav-text">Projects</span></a></li>
+            <li><a href="index.html" class="nav-link nav-projects-link"><i class="fa-solid fa-folder-open nav-icon"></i><span class="nav-text">Projects</span></a></li>
         </ul>
         <div class="nav-actions">
             <div class="nav-lang-switch">
